`text-underline-position:left` and `right` values should be ignored in vertical-sideways writing modes
Categories
(Core :: Layout: Text and Fonts, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox74 | --- | fixed |
People
(Reporter: jfkthame, Assigned: jfkthame)
References
Details
Attachments
(2 files)
Testcase:
data:text/html,<u style="writing-mode:sideways-rl; text-underline-position:right; text-underline-offset:2px">test
This incorrectly renders the underline on the right. According to the spec the left
and right
values are only applicable to vertical typographic modes. writing-mode:sideways-rl
results in text with horizontal typographic mode, just rotated 90°; as such, the right
value should be ignored and the underline should remain "under" the text.
(Note that this bug doesn't manifest if text-underline-offset
is left at auto
; it only appears when a non-auto
offset is used.)
Assignee | ||
Comment 1•6 years ago
|
||
This was noticed while testing the patch in bug 1607308, but as it's somewhat distinct from the primary issue there, I'd like to fix this (and add a testcase) first, before landing the more extensive changes in that bug.
Assignee | ||
Comment 2•6 years ago
|
||
Updated•6 years ago
|
Assignee | ||
Comment 3•6 years ago
|
||
Depends on D60351
Comment 8•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/21649bdb1cc8
https://hg.mozilla.org/mozilla-central/rev/72e73341902f
Description
•