Bug 1609730 - Don't apply text-underline-position:right to sideways text (rotated horizontal typographic mode). r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D60351