layout/generic/nsTextFrame.cpp
@@ -5081,7 +5081,8 @@ void nsTextFrame::GetTextDecorations(
             nsLayoutUtils::GetColor(f, &nsStyleTextReset::mTextDecorationColor);
       }
 
-      bool swapUnderlineAndOverline = vertical && IsUnderlineRight(f);
+      bool swapUnderlineAndOverline =
+          vertical && !wm.IsSideways() && IsUnderlineRight(f);
       const auto kUnderline = swapUnderlineAndOverline
                                   ? StyleTextDecorationLine::OVERLINE
                                   : StyleTextDecorationLine::UNDERLINE;
@@ -5484,7 +5485,8 @@ void nsTextFrame::UnionAdditionalOverflow(nsPresContext* aPresContext,
             params.offset = metrics.*lineOffset;
             params.defaultLineThickness = params.lineSize.height;
 
-            bool swapUnderline = verticalDec && IsUnderlineRight(this);
+            bool swapUnderline =
+                verticalDec && !wm.IsSideways() && IsUnderlineRight(this);
             if (swapUnderline
                     ? lineType == StyleTextDecorationLine::OVERLINE
                     : lineType == StyleTextDecorationLine::UNDERLINE) {
@@ -5690,6 +5692,7 @@ void nsTextFrame::DrawSelectionDecorations(
   const gfxFloat appUnitsPerDevPixel =
       aTextPaintStyle.PresContext()->AppUnitsPerDevPixel();
 
+  const WritingMode wm = GetWritingMode();
   switch (aSelectionType) {
     case SelectionType::eIMERawClause:
     case SelectionType::eIMESelectedRawClause:
@@ -5704,10 +5707,10 @@ void nsTextFrame::DrawSelectionDecorations(
       params.defaultLineThickness = ComputeSelectionUnderlineHeight(
           aTextPaintStyle.PresContext(), aFontMetrics, aSelectionType);
 
-      bool swapUnderline = aVertical && IsUnderlineRight(this);
+      bool swapUnderline =
+          aVertical && !wm.IsSideways() && IsUnderlineRight(this);
       if (swapUnderline ? aDecoration == StyleTextDecorationLine::OVERLINE
                         : aDecoration == StyleTextDecorationLine::UNDERLINE) {
-        WritingMode wm = GetWritingMode();
         const auto* styleText = StyleText();
         if (styleText->mTextUnderlinePosition.IsUnder()) {
           params.offset = -aFontMetrics.emDescent;
@@ -6315,10 +6318,10 @@ void nsTextFrame::PaintTextSelectionDecorations(
 
   gfxFont* firstFont = aParams.provider->GetFontGroup()->GetFirstValidFont();
   bool verticalRun = mTextRun->IsVertical();
-  bool rightUnderline = verticalRun && IsUnderlineRight(this);
+  bool useVerticalMetrics = verticalRun && mTextRun->UseCenterBaseline();
+  bool rightUnderline = useVerticalMetrics && IsUnderlineRight(this);
   const auto kDecoration = rightUnderline ? StyleTextDecorationLine::OVERLINE
                                           : StyleTextDecorationLine::UNDERLINE;
-  bool useVerticalMetrics = verticalRun && mTextRun->UseCenterBaseline();
   gfxFont::Metrics decorationMetrics(
       firstFont->GetMetrics(useVerticalMetrics ? nsFontMetrics::eVertical
                                                : nsFontMetrics::eHorizontal));
@@ -7003,7 +7006,8 @@ void nsTextFrame::DrawTextRunAndDecorations(
       params.offset = metrics.*lineOffset;
     }
 
-    bool swapUnderline = verticalDec && IsUnderlineRight(this);
+    bool swapUnderline =
+        verticalDec && !wm.IsSideways() && IsUnderlineRight(this);
     if (swapUnderline ? lineType == StyleTextDecorationLine::OVERLINE
                       : lineType == StyleTextDecorationLine::UNDERLINE) {
       SetOffsetIfLength(dec.mTextUnderlineOffset, params, metrics,
@@ -7362,7 +7366,8 @@ bool nsTextFrame::CombineSelectionUnderlineRect(nsPresContext* aPresContext,
     SetWidthIfLength(decThickness, &params.lineSize.height,
                      aPresContext->AppUnitsPerDevPixel());
 
-    bool swapUnderline = verticalRun && IsUnderlineRight(this);
+    bool swapUnderline =
+        verticalRun && !wm.IsSideways() && IsUnderlineRight(this);
     if (swapUnderline ? textDecs.HasOverline() : textDecs.HasUnderline()) {
       SetOffsetIfLength(StyleText()->mTextUnderlineOffset, params, metrics,
                         aPresContext->AppUnitsPerDevPixel(), wm.IsSideways(),
